tests/snapshots/lexer__identifiers__underscore_start.snap
---
source: tests/lexer.rs
expression: "lex(\"_foo\")"
---
Ok(
    [
        Token {
            kind: Identifier(
                "_foo",
            ),
            span: Span {
                start: 0,
                end: 4,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 4,
                end: 4,
            },
        },
    ],
)
