tests/snapshots/lexer__identifiers__with_digits.snap
---
source: tests/lexer.rs
expression: "lex(\"foo123\")"
---
Ok(
    [
        Token {
            kind: Identifier(
                "foo123",
            ),
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 6,
                end: 6,
            },
        },
    ],
)
